[package]
name = "vtcode-eval"
version = "0.135.7"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vtcode-commons = { path = "../vtcode-commons", version = "0.135.7" }
vtcode-core = { path = "../vtcode-core", version = "0.135.7" }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.135.7" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
