[package]
name = "vtcode-eval"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Agent evaluation framework for VT Code: pass@k / pass^k metrics, capability and regression evals, and environment-based outcome verification."
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-eval"
keywords = ["vtcode", "agent", "evaluation", "metrics", "testing"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vtcode-commons = { path = "../vtcode-commons", version = "0.135.9" }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.135.9" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
