[package]
name = "vtcode-exec-events"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
description = "Structured execution telemetry event schema used across VT Code crates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-exec-events"
categories = ["development-tools", "data-structures", "database"]
keywords = ["vtcode", "agent", "turn", "vt", "cache"]

[features]
default = ["serde-json"]
serde-json = []
telemetry-tracing = ["dep:tracing"]
telemetry-log = ["serde-json", "dep:log"]
schema-export = ["dep:schemars"]

[dependencies]
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, optional = true }
log = { version = "0.4", optional = true }
schemars = { workspace = true, optional = true, features = [
    "derive",
    "indexmap2",
] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
vtcode-commons = { path = "../vtcode-commons", version = "0.86.7" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
