[package]
name = "vtcode-file-search"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
license.workspace = true
readme = "README.md"
description = "Fast, parallel fuzzy file search library for VT Code"
repository = "https://github.com/vinhnx/vtcode"

[[bin]]
name = "vtcode-file-search"
path = "src/main.rs"

[lib]
name = "vtcode_file_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = "0.3"
vtcode-commons = { path = "../vtcode-commons", version = "0.90.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
num_cpus = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
