[package]
name = "vtcode-file-search"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
license.workspace = true
readme = "README.md"
description = "Fast, parallel fuzzy file search library for VT Code"
repository = "https://github.com/vinhnx/vtcode"

[[bin]]
name = "vtcode-file-search"
path = "src/main.rs"

[lib]
name = "vtcode_file_search"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = "0.3"
vtcode-commons = { path = "../vtcode-commons", version = "0.118.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
num_cpus = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = { workspace = true }

[lints.clippy]
unwrap_used = "allow"
panic = "allow"
panic_in_result_fn = "allow"
unused_result_ok = "allow"
float_cmp = "allow"
unreachable = "allow"
assertions_on_result_states = "allow"

[lints.rust]
unfulfilled_lint_expectations = "allow"

