[package]
name = "vtcode-file-search"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Fast, parallel fuzzy file search library for VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-file-search"
keywords = ["search", "fuzzy", "file-search", "parallel", "vtcode"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vtcode-file-search"
path = "src/main.rs"

[lib]
name = "vtcode_file_search"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = "0.3"
vtcode-commons = { path = "../vtcode-commons", version = "0.125.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
num_cpus = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

