[package]
name = "vtcode-ghostty-vt-sys"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Safe Ghostty VT snapshot wrapper for VT Code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
libloading = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
