[package]
name = "vtcode-ghostty-vt-sys"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Safe Ghostty VT snapshot wrapper for VT Code"
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords = ["ghostty", "vt", "terminal", "ffi", "vtcode"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
libloading = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

