[package]
name = "vtcode-indexer"
version = "0.43.4"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Workspace-friendly code indexer extracted from VTCode"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-indexer"
categories = ["development-tools", "parsing", "command-line-interface"]
keywords = ["vt", "tui", "indexer", "agent", "coding-agent"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
anyhow = "1.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
ignore = "0.4"  # Respect .gitignore, .ignore, etc.

[dev-dependencies]
tempfile = "3.0"

