[package]
name = "vtcode-indexer"
version = "0.84.1"
edition = "2024"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Workspace-friendly code indexer extracted from VT Code"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-indexer"
categories = ["development-tools", "parsing", "command-line-interface"]
keywords = ["vt", "tui", "indexer", "agent", "coding-agent"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
anyhow = "1.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
ignore = "0.4"                                     # Respect .gitignore, .ignore, etc.
vtcode-commons = { path = "../vtcode-commons", version = "0.84.1" }

[dev-dependencies]
tempfile = "3.24"
