[package]
name = "vtcode-indexer"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Workspace-friendly code indexer extracted from VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-indexer"
categories = ["development-tools", "parsing", "command-line-interface"]
keywords = ["vt", "tui", "indexer", "agent", "coding-agent"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
anyhow = { workspace = true }
hashbrown = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ignore = { workspace = true }                                     # Respect .gitignore, .ignore, etc.
vtcode-commons = { path = "../vtcode-commons", version = "0.86.7" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
