[package]
name = "vtcode-llm"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Prototype extraction of VT Code's unified LLM client layer"
license.workspace = true
publish = false
categories = ["api-bindings", "science::ml"]
keywords = ["vtcode", "llm", "ai", "openai", "anthropic"]

[features]
default = [
    "anthropic",
    "deepseek",
    "google",
    "moonshot",
    "ollama",
    "openai",
    "openrouter",
    "zai",
    "functions",
]

anthropic = []
deepseek = []
google = []
moonshot = []
ollama = []
openai = []
openrouter = []
zai = []
functions = []
telemetry = []
mock = ["dep:async-trait"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
vtcode-commons = { path = "../vtcode-commons", version = "0.86.8" }
vtcode-core = { path = "../vtcode-core", version = "0.86.8", default-features = false }

[dev-dependencies]
futures = { workspace = true }
assert_fs = { workspace = true }

[lints]
workspace = true
