[package]
name = "vtcode-lmstudio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LM Studio OSS provider integration for VT Code"
publish = false

[lib]
name = "vtcode_lmstudio"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json.workspace = true
tokio.workspace = true
tracing = { version = "0.1", features = ["log"] }
which = "8.0"
vtcode-commons = { path = "../vtcode-commons" }
vtcode-config = { path = "../vtcode-config" }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
