[package]
name = "vtcode-lmstudio"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
license.workspace = true
description = "LM Studio OSS provider integration for VT Code"
publish = false

[lib]
name = "vtcode_lmstudio"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing = { workspace = true, features = ["log"] }
which = "8.0"
vtcode-commons = { path = "../vtcode-commons" }
vtcode-config = { path = "../vtcode-config" }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
