[package]
name = "vtcode-markdown-store"
version = "0.39.13"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Markdown-backed storage utilities extracted from VTCode"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-markdown-store"
categories = ["data-structures", "encoding"]
keywords = ["vt", "markdown", "storage", "agent", "encoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["projects", "kv", "cache"]
projects = []
kv = []
cache = []

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
indexmap = { version = "2.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.1"
