[package]
name = "vtcode-markdown-store"
version = "0.85.0"
edition = "2024"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Markdown-backed storage utilities extracted from VT Code"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-markdown-store"
categories = ["data-structures", "encoding"]
keywords = ["vt", "markdown", "storage", "agent", "encoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["projects", "kv", "cache"]
projects = []
kv = []
cache = []

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
indexmap = { version = "2.13", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.24"
serial_test = "3.3"
