[package]
name = "vtcode-markdown-store"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Markdown-backed storage utilities extracted from VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-markdown-store"
categories = ["data-structures", "encoding"]
keywords = ["vt", "markdown", "storage", "agent", "encoding"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["projects", "kv", "cache"]
projects = []
kv = []
cache = []

[dependencies]
anyhow = { workspace = true }
fs2 = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
