[package]
name = "vtcode-safety"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "Command safety detection, execution policies, and sandboxing for VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-safety"
categories = ["development-tools"]
keywords = ["vt", "safety", "sandbox", "policy", "command"]
publish = false

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
hashbrown = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true }
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tracing = { workspace = true }
vtcode-commons = { path = "../vtcode-commons", version = "0.131.0" }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
