[package]
name = "vtcode-skills"
version = "0.135.6"
edition.workspace = true
license.workspace = true
description = "Skill types, discovery, loading, and validation for VT Code"
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hashbrown.workspace = true
include_dir = "0.7"
libloading = "0.9"
lru = "0.18"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
vtcode-commons = { path = "../vtcode-commons", version = "0.135.6" }
vtcode-config = { path = "../vtcode-config", version = "0.135.6" }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
serial_test.workspace = true

[lints]
workspace = true
